--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       content="Front-end react app with flask back-end"
     />
     <link rel="icon" href="%PUBLIC_URL%/hunters-race-MYbhN8KaaEc-unsplash.jpg">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
